# magnetic_guide_navigation_msgs

./: CMakeLists.txt  package.xml
action/: Center.action  GoTo.action  GoToNode.action  Move.action  Turn.action
msg/: Direction.msg  GetGraphRes.msg  GraphArc.msg  GraphArcIntersection.msg  GraphNode.msg  GraphNodePose.msg  MagneticLocalizationStatus.msg  MagneticSensor.msg  SetGraphReq.msg  SetNodeReq.msg
srv/: GetGraph.srv  GetGraphNode.srv  GetGraphRaw.srv  GetGraphRoute.srv  ReloadGraph.srv  SetAxis.srv  SetGraph.srv  SetNode.srv
